--- a/config/waybar/style1.css
+++ b/config/waybar/style1.css
@@ -7,15 +7,15 @@ G* {
   transition-duration: 0.5s;
 }
 window#waybar {
-  color: #D3C6AA;
-  background-color: #272E33;
+  color: #cdd6f4;
+  background-color: #11111b;
   border-bottom: 1px solid #272E33;
   transition-duration: 0.5s;
   transition-property: background-color;
 }
 #workspaces button {
-  background: #272E33;
-  color: #D3C6AA;
+  background: #11111b;
+  color: #cdd6f4;
   padding-top: 0px;
   padding-bottom: 0px;
   padding-left: 4px;
@@ -23,17 +23,17 @@ window#waybar {
   border: none;
 }
 #workspaces button.focused {
-  color: #272E33;
-  background: #A7C080;
+  color: #11111b;
+  background: #f5c2e7;
 }
 #workspaces button.urgent {
   color: #f7768e;
 }
 #workspaces button.persistent {
-  color: #272E33;
+  color: #cdd6f4;
 }
 #workspaces button:hover {
-  color: #272E33;
+  color: #cdd6f4;
   background: #7FBBB3;
 }
 #clock,
@@ -46,16 +46,16 @@ window#waybar {
 #mode {
   margin: 0px 2px;   /* gaps between modules */
   padding: 0.2rem 0.6rem;
-  color: #D3C6AA;
-  background: #272E33;
+  color: #cdd6f4;
+  background: #11111b;
   border-bottom: 1px solid #272E33;
 }
 
 
 #custom-separator {
-  color: #859289;
-  background: #272E33;
-  border-bottom: 1px solid #272E33;
+  color: #cdd6f4;
+  background: #11111b;
+  border-bottom: 1px solid #11111b;
 }
 
 #custom-cava-internal{
