--- a/config/waybar/style2.css
+++ b/config/waybar/style2.css
@@ -1,11 +1,13 @@
 * {
-  font-family: "JetBrainsMono Nerd Font";
-  font-size: 13pt;
+  font-family: "Cascadia Code";
+  font-size: 10pt;
   font-weight: bold;
   transition-property: background-color;
   transition-duration: 0.5s;
 }
-.warning, .critical, .urgent {
+.warning,
+.critical,
+.urgent {
   animation-name: blink_red;
   animation-duration: 1s;
   animation-timing-function: linear;
@@ -16,77 +18,108 @@ window#waybar {
   background-color: transparent;
 }
 window > box {
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 15px;
+  margin-right: 15px;
   margin-top: 10px;
-  background-color: #272E33;
+  background-color: transparent;
   padding-left: 10px;
   padding-right: 10px;
   border-radius: 10px;
 }
+
+.modules-left,
+.modules-right,
+.modules-center {
+  background-color: #11111b;
+  border: 1px solid #f5c2e7;
+  border-radius: 10px;
+}
+.modules-right {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.modules-left {
+  /* padding-right: 5px; */
+}
+
 #workspaces {
   padding-left: 0px;
-  padding-right: 4px;
 }
 #workspaces button {
   padding-top: 5px;
   padding-bottom: 5px;
   padding-left: 6px;
   padding-right: 6px;
-  color: #D3C6AA;
+  color: #f5e0dc;
   border: none;
+  border-radius: 5px;
 }
 #workspaces button.focused {
-  background-color: #A7c080;
-  color: #272E33;
+  background-color: #f5c2e7;
+  color: #1e1e2e;
 }
 #workspaces button.urgent {
-  color: white;
+  color: #1e1e2e;
 }
 #workspaces button:hover {
-  background-color: #7FBBB3; 
+  background-color: #89dceb;
   color: white;
 }
 tooltip {
-  background: #272E33; 
+  background: #1e1e2e;
 }
 tooltip label {
-  color: #D3C6AA; 
+  color: #f5e0dc;
 }
 #custom-launcher {
-  font-size: 25px;
-  padding-left: 8px;
+  font-size: 15pt;
+  padding-left: 15px;
   padding-right: 6px;
-  color: #A7c080;
+  color: #f5c2e7;
 }
-#mode, #clock, #memory, #cpu, #pulseaudio, #network,  #custom-powermenu, #custom-cava-internal {
+#mode,
+#clock,
+#memory,
+#cpu,
+#pulseaudio,
+#network,
+#battery,
+#tray,
+#custom-powermenu,
+#custom-cava-internal {
   padding-left: 10px;
   padding-right: 10px;
 }
 
+#custom-cava-internal {
+  color: #cba6f7;
+}
+
 #memory {
-  color: #7FBBB3;
+  color: #89dceb;
 }
 #cpu {
-  color: #D699B6;
+  color: #f5c2e7;
 }
 #clock {
-  color: #D3C6AA 
+  color: #cdd6f4;
 }
 
 #pulseaudio {
-  color: #D3C6AA;
+  color: #cdd6f4;
 }
 #network {
-  color: #A7C080;
+  color: #cba6f7;
 }
 
 #network.disconnected {
-  color: #E67E80; 
+  color: #f38ba8;
 }
 
 #custom-powermenu {
-  color: #E67E80; 
+  color: #f38ba8;
+  font-size: 13pt;
 }
 #tray {
   padding-right: 8px;
@@ -94,12 +127,21 @@ tooltip label {
 }
 
 #custom-spotify {
-  color: #D3C6AA;
+  color: #cdd6f4;
+  font-weight: 500;
   margin-left: 2em;
 }
 
 #custom-weather {
-  color: #D3C6AA;
+  color: #f9e2af;
   margin-right: 5px;
 }
 
+#battery.charging,
+#battery.full,
+#battery.discharging {
+  color: #a6e3a1;
+}
+#battery.critical:not(.charging) {
+  color: #f38ba8;
+}
